# openarm_genesis_test

./: .gitignore  README.md  attached_camera.py  main.py  pyproject.toml
assets/: PBR_Ball.glb
env/: genesis_env.py
env/tasks/: openarm.py  simple_pick.py
